<resources>
    <string name="app_name">TbLibrary</string>
    <string name="loadError">加载失败</string>
    <string name="loadEmpty">没有数据</string>
    <string name="loading">加载中...</string>

    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="scan_code">扫一扫</string>
    <string name="open_flash">打开闪光灯</string>
    <string name="close_flash">关闭闪光灯</string>
    <string name="gallery">相册</string>
    <string name="scan_failed_tip">图片解析失败，换个图片试试.</string>


    <string name="tb_gallery">相\t册</string>
    <string name="tb_take_photo">拍\t照</string>
    <string name="tb_cancel">取\t消</string>
    <string name="tb_sure">确\t定</string>

    <string name="double_click_exit">再点一次退出应用</string>

    <string name="wifi_no_use">当前wifi网络不可用</string>
    <string name="mobile_no_use">当前移动网络不可用</string>
    <string name="internet_no_use">当前网络不可用</string>
    <string name="connect_error">链接出错</string>
    <string name="connect_time_out">链接超时</string>
    <string name="other_error">未知错误</string>
    <string name="json_error">数据错误异常</string>
    <string name="no_internet">网络出错了</string>
    <string name="save_img">保存图片</string>
    <string name="read_QR_code">识别二维码</string>

    <string name="arrayOut">数组越界了</string>
    <string name="zxSaoQRCode">@string/scan_code</string>
    <string name="zxOpenLight">@string/open_flash</string>
    <string name="zxGallery">图库</string>

    <string name="skip">跳过</string>

    <string name="permissionFailed">获取权限失败</string>

    <string name="noSupportDeskIcon">该设备不支持创建快捷方式</string>
    <string name="deskIconExist">快捷方式已存在</string>
    <string name="maxIconExist">最多支持4个快捷方式</string>


    <string name="saveSuccess">保存成功</string>
    <string name="search">搜索</string>

    <string name="notifyMark">应用需要通知权限，立即去设置？</string>
    <string name="notifyMark2">应用需要通知权限，请到设置中心设置!</string>


    <string name="springRefresh">正在刷新</string>
    <string name="releaseRefresh">松开刷新</string>
    <string name="pullRefresh">下拉刷新</string>
    <string name="minutesago">分钟前</string>
    <string name="hoursago">小时前</string>
    <string name="daysago">天前</string>
    <string name="just">刚刚</string>
    <string name="lastupdated">上次更新时间：</string>

    <string name="wait_second">剩余%d秒</string>
    <string name="getCodeDescribe">获取验证码</string>
    <string name="reGetCodeDescribe">重新获取</string>


    <string name="no_use_zh">不能输入中文</string>

    <string name="tb_keyboard_tx">上下文必须是Activity或者Fragment</string>
    <string name="tb_local_tips">为了更好的为您服务，请您打开您的GPS!</string>
    <string name="tb_go_set">去设置</string>
    <string name="float_window_permission_title">权限申请</string>
    <string name="float_window_permission_tips">应用需要悬浮窗口权限,是否立即去设置?</string>
</resources>
