<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x140">

        <LinearLayout
            android:id="@+id/default_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/default_header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pullRefresh"
                android:textColor="#777777" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lastupdated"
                    android:textColor="#777777"
                    android:textSize="@dimen/tb_text22" />

                <TextView
                    android:id="@+id/default_header_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/just"
                    android:textColor="#777777"
                    android:textSize="@dimen/tb_text22" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/default_header_arrow"
            android:layout_width="@dimen/x40"
            android:layout_height="@dimen/x80"
            android:layout_alignStart="@id/default_header_text"
            android:layout_centerVertical="true"
            android:layout_marginStart="-35dp" />

        <ProgressBar
            android:id="@+id/default_header_progressbar"
            android:layout_width="@dimen/x60"
            android:indeterminateDrawable="@drawable/loading"
            android:layout_height="@dimen/x60"
            android:layout_alignStart="@id/default_header_text"
            android:layout_centerVertical="true"
            android:layout_marginStart="-40dp"
            android:visibility="invisible"
            tools:visibility="visible" />
    </RelativeLayout>

</LinearLayout>